--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 h2, h3, h4, h5, p, li a {
   letter-spacing: 3px;
-  font-weight: 200; }
+  font-weight: 300; }
 
 @media all and (min-width: 450px) {
   h3 {
@@ -27,7 +27,7 @@ h2, h3, h4, h5, p, li a {
 #for-sharper-designs {
   padding-top: 50px;
   padding-bottom: 50px;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 4px; }
 
 @media all and (min-width: 768px) {
@@ -54,11 +54,6 @@ h2, h3, h4, h5, p, li a {
 #milk-logo {
   width: 150px; }
 
-#solhorizons-logo{
-  width:150px;
-  padding-top: 25px;
-}
-
 #about-me {
   margin-top: 100px; }
 
@@ -72,3 +67,5 @@ h2, h3, h4, h5, p, li a {
 footer {
   height: 60px;
   background-color: #222; }
+
+/*# sourceMappingURL=styles.css.map */
