Green to Orange colour change
This commit will change the colour of the site from green to orange

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ h2, h3, h4, h5, p, li a {
   margin-bottom: 40px; }
 
 .icons {
-  color: #4fba6f; }
+  color: #f16321; }
 
 footer {
   height: 60px;
