--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,9 @@ h2, h3, h4, h5, p, li a {
 #milk-logo {
   width: 150px; }
 
+#solhorizons-logo {
+  width: 200px; }
+
 #about-me {
   margin-top: 100px; }
 
